# week1-project-template

./: README.md  aal_volume_correlations.csv  analysis-test.ipynb  analysis.ipynb  analysis_elasticnet_sl.ipynb  carli_elastic_net.ipynb  carli_elastic_net.ipynb.ipynb  connectivity_analysis.py  descriptive-analyses-elizabeth.ipynb  enet_regression.ipynb  feature_analysis.ipynb  pyproject.toml  rbcpath-demo.ipynb  template-elizabeth.ipynb  training_features.csv  training_features_complete.csv
RSFC_jake/: VAN_connectivity.tsv
results/: miniproj-group4.tsv  summary_stats.csv
src/rbclib/: __init__.py
