[project]
name = "rbclib"
version = "0.1.0"
description = """A library that extends cloudpathlib to the RBC dataset."""
authors = [{name="Noah C. Benson", email="nben@uw.edu"}]
license = {"text"="MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["cloud"]
classifiers = [
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Software Development',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Scientific/Engineering',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS']
dependencies = [
     'cloudpathlib[s3,gs,azure] >= 0.18.0']


[project.urls]
homepage = "https://github.com/NeuroHackademy2025/rbc-project-template"
repository = "https://github.com/NeuroHackademy2025/rbc-project-template"
